# hass-atlas

./: .gitignore  README.md  pyproject.toml
docs/: 2026-02-25-hpwh-power-spike.md  2026-02-26-untracked-power-analysis.md
src/ha_atlas/: __init__.py  __main__.py  areas.py  audit.py  cli.py  context.py  discovery.py  energy.py  models.py  normalize.py  output.py  panels.py  registry.py  topology.py
src/hass_atlas/: __init__.py  __main__.py  areas.py  audit.py  cli.py  context.py  discovery.py  energy.py  ha_client.py  normalize.py  output.py  panels.py  registry.py  topology.py  water.py
tests/: conftest.py  test_areas.py  test_audit.py  test_energy.py  test_ha_client.py  test_normalize.py  test_registry.py  test_topology.py
